# BGNet

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: braindecode.md  faq.md  fine_tuning.md  mil.md  pretrained.md  quickstart.md  reproduce_paper.md
examples/: 01_load_pretrained_and_predict.py  02_predict_from_mne_raw.py  03_finetune_binary_classification.py  04_save_and_reload_checkpoint.py  05_convert_research_checkpoint.py  06_braindecode_eegclassifier.py  07_convert_research_mil_checkpoint.py  08_predict_mil_from_mne_raw.py
release_assets/: checkpoints.template.json  huggingface_model_card_template.md  release_checklist.md
src/bgnet/: __init__.py  _core_adaptive.py  _core_background_first.py  _core_model.py  braindecode.py  checkpoints.py  classifier.py  cli.py  config.py  factory.py  geometry.py  inference.py  legacy.py  mil.py  model.py  runtime.py
src/bgnet/data/: standard_1005_positions.json
tests/: conftest.py  test_checkpoints.py  test_geometry.py  test_mil.py  test_model.py  test_parity_optional.py  test_runtime.py
tests/data/: golden_forward.npz
tools/: stage_local_release_assets.py
