[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "bgnet-eeg"
version = "0.1.0"
description = "BGNet: a physiology-first EEG model built from the Background-First EEG architecture."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
  { name = "Daniel Choi" },
]
keywords = [
  "eeg",
  "clinical-eeg",
  "pytorch",
  "biosignals",
  "deep-learning",
  "braindecode",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
  "numpy>=1.23",
  "packaging>=24.0",
  "safetensors>=0.4.0",
  "torch>=2.2",
]

[project.optional-dependencies]
train = [
  "pyyaml>=6.0",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "tqdm>=4.66",
]
braindecode = [
  "braindecode>=0.8",
  "mne>=1.6",
]
hub = [
  "huggingface_hub>=0.28",
]
dev = [
  "build>=1.2",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "twine>=5.1",
]

[project.scripts]
bgnet-download = "bgnet.cli:download_main"
bgnet-env-check = "bgnet.cli:env_check_main"
bgnet-predict = "bgnet.cli:predict_main"
bgnet-predict-raw = "bgnet.cli:predict_raw_main"

[project.urls]
Homepage = "https://github.com/danielchoi0315/BGNet"
Repository = "https://github.com/danielchoi0315/BGNet"
Issues = "https://github.com/danielchoi0315/BGNet/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/bgnet"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
